# flight-searcher

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
flight_searcher/: container.py  di_test.py  service.py  settings.py
flight_searcher/api/: app.py
flight_searcher/api/routers/: health.py  top_flights.py
flight_searcher/api/schemas/: flight.py  health.py
flight_searcher/clients/: http.py  redis.py
flight_searcher/providers/: airports.py  flights.py
