[tool.poetry]
name = "flight_searcher"
version = "0.1.0"
description = ""
authors = ["Jonas Petrovsky <jontesek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
aioredis = "^2.0.1"
structlog = "^22.1.0"
sentry-sdk = "^1.8.0"
dependency-injector = "^4.39.1"
request-session = "^0.14.0"
pycountry = "^22.3.5"
pydantic = "^1.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3